add angular material and theme

--- a/ClientApp/src/app/component/landing/landing.component.html
+++ b/ClientApp/src/app/component/landing/landing.component.html
@@ -15,7 +15,9 @@
                     Ya pues callame plv
                 </button>
             </div>
-            
+            <button mat-raised-button color="primary">Primary</button>
+            <mat-slide-toggle color="accent">Toggle me!</mat-slide-toggle>
+
 		</div>
 	</div>
 </section>
