Modificacion landing, login, register

--- a/ClientApp/src/app/component/landing/landing.component.html
+++ b/ClientApp/src/app/component/landing/landing.component.html
@@ -1,23 +1,14 @@
 <section class="home">
 	<div class="section_top">
 		<div class="sec_top">
-			<h1>Pinchel Errpe</h1>
+			<h1 class="neonText">Pinchel Errpe</h1>
             <span> PUTAS facciones de a verga</span>
-            
-            <div class="contenedor_button">
-                
-                <a href="../login/login.component.html">
-                    <button class="button_log">
-                        Calla mmv
-                    </button>
-                </a>
-                <button class="button_res">
-                    Ya pues callame plv
-                </button>
+            <div class="landing-card-footer">
+              <div class="lading_container">
+                <button class="landing-btn-submit pulse mr-2" type="submit">Entrar</button>
+                <button class="landing-btn-submit pulse mr-2" type="submit">Registrate</button>
+              </div>
             </div>
-            <button mat-raised-button color="primary">Primary</button>
-            <mat-slide-toggle color="accent">Toggle me!</mat-slide-toggle>
-
-		</div>
-	</div>
+	  </div>
+  </div>
 </section>
