--- a/ClientApp/src/app/component/registrarse/registrarse.component.html
+++ b/ClientApp/src/app/component/registrarse/registrarse.component.html
@@ -3,23 +3,24 @@
         <div class="registrarse-card">
             <div class="registrarse-card-header">
                 <div class="registrarse-card-header-title">
-                    Registrarse
+                    Registrate
                 </div>
             </div>
             <div class="registrarse-card-body">
                 <div class="registrarse-form-control">
-                    <input type="text" placeholder="nombre" class="registrarse-input">
+                    <input type="text" placeholder="Nombre de usuario" class="registrarse-input">
                 </div>
                 <div class="registrarse-form-control">
-                    <input type="email" placeholder="correo" class="registrarse-input">
+                    <input type="email" placeholder="Correo electronico" class="registrarse-input">
                 </div>
                 <div class="registrarse-form-control">
-                    <input type="password" placeholder="contraseña" class="registrarse-input">
+                    <input type="password" placeholder="Contraseña" class="registrarse-input">
                 </div>
             </div>
             <div class="registrarse-card-footer">
 
-                <button class="registrarse-btn-submit">Enviar</button>
+                <button class="registrarse-btn-submit pulse">Registrarse</button>
+                <button class="registrarse-btn-submit pulse">Inicia Sesion</button>
             </div>
         </div>
     </form>
