--- a/ClientApp/src/app/component/login/login.component.scss
+++ b/ClientApp/src/app/component/login/login.component.scss
@@ -1,23 +1,61 @@
+ /*//////////////////////////////////////////////////////////////////
+[ FONT ]*/
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&family=Ubuntu:wght@700&display=swap');
+*{
+  font-family: Ubuntu, 'Open Sans', sans-serif;
+}
+/*---------*/
  .login-container-card{
     height: 100vh;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    background: purple;
-    
+    background-image: url(../../../assets/images/Imagelon-3.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    -webkit-background-size: 100% 100%;               /* Safari 3.0 */
+    -moz-background-size: 100% 100%;                  /* Gecko 1.9.2 (Firefox 3.6) */
+    -o-background-size: 100% 100%;                    /* Opera 9.5 */
+    background-size: 100% 100%;                       /* Gecko 2.0 (Firefox 4.0) and other CSS3-compliant browsers */
+    background-size: cover;
+    animation: change 20s infinite ;
 }
 .login-card{
-    background-color: white;
     height: 50vh;
     width:  30vw;
     margin: auto;
     padding: 2rem;
     display: grid;
     grid-template-rows: 1fr 3fr 1fr;
+    background-color:#ffffff05;
+    backdrop-filter: blur(7px);
+    -webkit-backdrop-filter: blur(25pox);
 }
+/*---Logo dixel*/
+.imagen{
+  width:170px;
+	height:120px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+.login-form-title{
+  font-family: Ubuntu;
+  font-size: 28px;
+  color: #fff;
+  line-height: 1.2;
+  text-align: center;
+  text-transform: uppercase;
+  display: block;
+  margin: 15px 10px;
+  animation: cpink-neon 2s infinite alternate;
+}
+
 .login-input, .login-input:focus-visible{
     all:unset;
+    color:#fff;
     border-top: none;
     border-right: none;
     border-left: none;
@@ -29,35 +67,75 @@
 }
 .login-input:focus-visible{
     border-bottom: 1.5px solid rgba(94, 2, 117, 0.678);
-    
+    font-family: Ubuntu;
 }
 .login-form-control{
     margin: 1rem 0;
     text-align: center;
 }
-.login-form{
-}
 .login-btn-submit{
-    text-align: center;
-    width: 100%;
-    margin: 1rem auto;
-    line-height: 2;
-    background-color: black;
-    color: white;
-    font-size: 1rem;
-    font-weight: bold;
+  color:#fff;
+  font-size: 1rem;
+  font-family: Ubuntu;
+  justify-content: center;
+  align-items: center;
+  padding: 0 20px;
+  min-width: 160px;
+  height: 42px;
+  width: 50%;
+  border-radius: 21px;
+  margin: 2rem auto;
+  background: #d41872;
+  position: relative;
+  border-color: #d41872;
+  z-index: 1;
 }
+.login-btn-submit:hover{
+  background-color: transparent;
+}
+
 .login-card-header-title{
     text-align: center;
     font-size: 2rem;
     font-weight: 400;
     font-family: sans-serif;
-    color: #561256;
+    color: #fff;
 }
+/*-----KEYFRAME IMAGES-------*/
+@keyframes change {
+  0%{
+      background-image: url(../../../assets/images/Imagelon-3.png);
+  }
+  20%{
+      background-image: url(../../../assets/images/imagenlon-2.png);
+  }
+  40%{
+      background-image: url(../../../assets/images/Imagelonn-1.png);
+  }
+  60%{
+      background-image: url(../../../assets/images/imagen-6.png);
+  }
+  80%{
+      background-image: url(../../../assets/images/Imagenlon-5.png);
+  }
+  100%{
+      background-image: url(../../../assets/images/Imagelon-3.png);
+  }
+}
+/*-----KEYFRAME NEON TEXT-----*/
+@keyframes cpink-neon {
+	0%, 19%, 21%, 23%, 25%, 54%, 56%, 100% {
+		text-shadow: 0 -1px 4px #fff,
+					 0 -2px 10px rgb(255, 0, 221),
+					 0 -10px 20px #f09;
+	}
 
-
+	10%, 15%, 60% {
+		text-shadow: none;
+	}
+}
 // Animate the size, outside
-.pulse:hover, 
+.pulse:hover,
 .pulse:focus {
     cursor: pointer;
   animation: pulse 1s;
@@ -69,7 +147,7 @@
 }
 
 $colors: (
-  pulse: #a100e0, 
+  pulse: #a100e0,
 );
 
 // Sass variables compile to a static string; CSS variables are dynamic and inherited
@@ -82,12 +160,12 @@ $colors: (
 }
 
 // Now every button will have different colors as set above. We get to use the same structure, only changing the custom properties.
-button {  
+button {
   color: var(--color);
   transition: 0.25s;
-  
+
   &:hover,
-  &:focus { 
+  &:focus {
     border-color: var(--hover);
     color: #fff;
   }
