--- a/ClientApp/src/styles.scss
+++ b/ClientApp/src/styles.scss
@@ -1,3 +1,5 @@
 @import 'assets/styles/my-theme.scss';
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&family=Ubuntu:wght@700&display=swap');
