--- a/ClientApp/src/app/component/landing/landing.component.html
+++ b/ClientApp/src/app/component/landing/landing.component.html
@@ -5,8 +5,8 @@
             <span> PUTAS facciones de a verga</span>
             <div class="landing-card-footer">
               <div class="lading_container">
-                <button class="landing-btn-submit pulse mr-2" type="submit">Entrar</button>
-                <button class="landing-btn-submit pulse mr-2" type="submit">Registrate</button>
+                <button class="landing-btn-submit pulse mr-2" (click)="ir('login')" type="submit">Entrar</button>
+                <button class="landing-btn-submit pulse mr-2" (click)="ir('registrarse')" type="submit">Registrate</button>
               </div>
             </div>
 	  </div>
