--- a/ClientApp/src/app/component/login/login.component.html
+++ b/ClientApp/src/app/component/login/login.component.html
@@ -22,7 +22,7 @@
             </div>
             <div class="login-card-footer">
               <button class="login-btn-submit pulse" [ngClass]="{'btn-disabled':formLogin.invalid}" [disabled]="formLogin.invalid" type="submit">Entrar</button>
-              <button class="login-btn-submit pulse" type="submit">Registrate</button>
+              <button class="login-btn-submit pulse" (click)="ir('registrarse')">Registrate</button>
             </div>
         </div>
     </form>
