Arrow para volver al inicio

--- a/ClientApp/src/app/component/admin/admin/admin.component.html
+++ b/ClientApp/src/app/component/admin/admin/admin.component.html
@@ -1,5 +1,12 @@
-<div style="height: 50px; width: 100%; border-bottom: 1px solid black; text-align: center;">
-espacio para el componente de navegacion administrativa, pasiri hazlo, luego quitar el div entero
-y remplazar con el componente.
-</div>
+<nav>
+  <li>
+    <ul>SAFA</ul>
+    <ul>SAPD</ul>
+    <ul>FBI</ul>
+    <ul>WWE</ul>
+    <ul>ABOGADOS</ul>
+    <ul>SALIR</ul>
+  </li>
+</nav>
+
 <router-outlet></router-outlet>
