--- a/ClientApp/src/app/component/login/login.component.html
+++ b/ClientApp/src/app/component/login/login.component.html
@@ -7,6 +7,11 @@
         PICHEL RP - Facciones
       </span>
         <div class="login-card">
+          <div class="container_icon">
+            <a href="#">
+              <mat-icon aria-hidden="false" aria-label="volver">arrow_back_ios_new</mat-icon>
+            </a>
+          </div>
             <div class="login-card-header">
                 <div class="login-card-header-title">
                     Iniciar sesión
