--- a/ClientApp/src/app/component/registrarse/registrarse.component.html
+++ b/ClientApp/src/app/component/registrarse/registrarse.component.html
@@ -2,6 +2,11 @@
     <form [formGroup]="formRegistrarse" (ngSubmit)="enviar()" class="registrarse-form">
         <div class="registrarse-card">
             <div class="registrarse-card-header">
+              <div class="container_icon">
+                <a href="#">
+                  <mat-icon aria-hidden="false" aria-label="volver">arrow_back_ios_new</mat-icon>
+                </a>
+              </div>
                 <div class="registrarse-card-header-title">
                     Registrate
                 </div>
