--- a/ClientApp/src/app/component/login/login.component.scss
+++ b/ClientApp/src/app/component/login/login.component.scss
@@ -1,10 +1,4 @@
- /*//////////////////////////////////////////////////////////////////
-[ FONT ]*/
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&family=Ubuntu:wght@700&display=swap');
-*{
-  font-family: Ubuntu, 'Open Sans', sans-serif;
-}
 /*---------*/
  .login-container-card{
     height: 100vh;
@@ -52,7 +46,10 @@
   margin: 15px 10px;
   animation: cpink-neon 2s infinite alternate;
 }
-
+.container_icon a{
+  text-decoration: none;
+  color:#FFF;
+}
 .login-input, .login-input:focus-visible{
     all:unset;
     color:#fff;
@@ -174,7 +171,7 @@ button {
 
 
 
-//disabled
+//Botton no disponible
 .btn-disabled{
-  //aca entra pasiri
+  cursor: not-allowed;
 }
