--- a/ClientApp/src/app/component/login/login.component.html
+++ b/ClientApp/src/app/component/login/login.component.html
@@ -10,6 +10,7 @@
           <div class="container_icon">
             <a href="#">
               <mat-icon aria-hidden="false" aria-label="volver">arrow_back_ios_new</mat-icon>
+              <p>Home</p>
             </a>
           </div>
             <div class="login-card-header">
@@ -27,7 +28,9 @@
             </div>
             <div class="login-card-footer">
               <button class="login-btn-submit pulse" [ngClass]="{'btn-disabled':formLogin.invalid}" [disabled]="formLogin.invalid" type="submit">Entrar</button>
-              <button class="login-btn-submit pulse" (click)="ir('registrarse')">Registrate</button>
+            </div>
+            <div class="login-card-footer">
+              <a class="register-btn-submit" (click)="ir('registrarse')">¿No tienes cuenta? Registrate!</a>
             </div>
         </div>
     </form>
