--- a/ClientApp/src/app/component/registrarse/registrarse.component.html
+++ b/ClientApp/src/app/component/registrarse/registrarse.component.html
@@ -1,10 +1,12 @@
 <div class="registrarse-container-card">
     <form [formGroup]="formRegistrarse" (ngSubmit)="enviar()" class="registrarse-form">
+      <img src="https://imgur.com/YHL61AI.png" class="imagen" lt="DixelRP" title="©DixelRP">
         <div class="registrarse-card">
             <div class="registrarse-card-header">
               <div class="container_icon">
                 <a href="#">
                   <mat-icon aria-hidden="false" aria-label="volver">arrow_back_ios_new</mat-icon>
+                  <p>Home</p>
                 </a>
               </div>
                 <div class="registrarse-card-header-title">
@@ -23,9 +25,10 @@
                 </div>
             </div>
             <div class="registrarse-card-footer">
-
-                <button class="registrarse-btn-submit pulse" [ngClass]="{'btn-disabled':formRegistrarse.invalid}" [disabled]="formRegistrarse.invalid">Registrarse</button>
-                <button class="registrarse-btn-submit pulse" (click)="ir('login')">Inicia Sesión</button>
+              <button class="registrarse-btn-submit pulse" [ngClass]="{'btn-disabled':formRegistrarse.invalid}" [disabled]="formRegistrarse.invalid">Registrarse</button>
+            </div>
+            <div class="registrarse-card-footer">
+              <a class="login-btn-submit" (click)="ir('login')">¿Ya tienes cuenta? Inicia Sesión</a>
             </div>
         </div>
     </form>
