--- a/ClientApp/src/app/component/login/login.component.scss
+++ b/ClientApp/src/app/component/login/login.component.scss
@@ -1,97 +1,111 @@
+/* --------- */
+.login-container-card {
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: url(../../../assets/images/Imagelon-3.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  -webkit-background-size: 100% 100%;
+  -moz-background-size: 100% 100%;
+  -o-background-size: 100% 100%;
+  background-size: 100% 100%;
+  background-size: cover;
+  animation: change 20s infinite;
+}
 
-/*---------*/
- .login-container-card{
-    height: 100vh;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-image: url(../../../assets/images/Imagelon-3.png);
-    background-position: center;
-    background-repeat: no-repeat;
-    -webkit-background-size: 100% 100%;               /* Safari 3.0 */
-    -moz-background-size: 100% 100%;                  /* Gecko 1.9.2 (Firefox 3.6) */
-    -o-background-size: 100% 100%;                    /* Opera 9.5 */
-    background-size: 100% 100%;                       /* Gecko 2.0 (Firefox 4.0) and other CSS3-compliant browsers */
-    background-size: cover;
-    animation: change 20s infinite ;
+.login-card {
+  height: 50vh;
+  width: 30vw;
+  margin: auto;
+  padding: 2rem;
+  display: grid;
+  grid-template-rows: 1fr 3fr 1fr;
+  background-color: #ffffff05;
+  backdrop-filter: blur(7px);
+  -webkit-backdrop-filter: blur(25pox);
 }
-.login-card{
-    height: 50vh;
-    width:  30vw;
-    margin: auto;
-    padding: 2rem;
-    display: grid;
-    grid-template-rows: 1fr 3fr 1fr;
-    background-color:#ffffff05;
-    backdrop-filter: blur(7px);
-    -webkit-backdrop-filter: blur(25pox);
-}
-/*---Logo dixel*/
-.imagen{
-  width:170px;
-	height:120px;
+
+/* --- Logo dixel */
+.imagen {
+  width: 170px;
+  height: 120px;
   display: block;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto 15px;
+  /* Añadido para espacio entre la imagen y el título */
 }
-.login-form-title{
+
+.login-form-title {
   font-family: Ubuntu;
   font-size: 28px;
   color: #fff;
   line-height: 1.2;
   text-align: center;
   text-transform: uppercase;
-  display: block;
-  margin: 15px 10px;
+  margin: 15px 0;
+  /* Ajuste de margen superior e inferior */
   animation: cpink-neon 2s infinite alternate;
 }
+
 .container_icon {
   display: flex;
   align-items: center;
+  margin-bottom: 10px;
+  /* Espacio entre ícono y títulos */
 }
+
 .container_icon a {
   display: flex;
   align-items: center;
   text-decoration: none;
-  color: #FFF;
+  color: #fff;
   text-align: right;
-
 }
+
 .container_icon a mat-icon {
-  font-size: 18px; /* Tamaño del icono */
-  font-weight: bold;
-}
-.container_icon a p {
-  font-size: 1.4rem; /* Tamaño del texto */
-}
-.container_icon a:hover {
-  color: #d41872; /* Color rosado al pasar el cursor */
+  font-size: 18px;
   font-weight: bold;
 }
 
-.login-input, .login-input:focus-visible{
-    all:unset;
-    color:#fff;
-    border-top: none;
-    border-right: none;
-    border-left: none;
-    border-bottom: 1px solid rgba(0,0,0,0.4);
-    width: 100%;
-    text-align: center;
-    font-size: 1rem;
-    transition: all .1s;
+.container_icon a p {
+  font-size: 1.4rem;
+  margin-left: 8px;
+  /* Espacio entre ícono y texto */
 }
-.login-input:focus-visible{
-    border-bottom: 1.5px solid rgba(94, 2, 117, 0.678);
-    font-family: Ubuntu;
+
+.container_icon a:hover {
+  color: #d41872;
+  font-weight: bold;
 }
-.login-form-control{
-    margin: 1rem 0;
-    text-align: center;
+
+.login-input,
+.login-input:focus-visible {
+  all: unset;
+  color: #fff;
+  border-top: none;
+  border-right: none;
+  border-left: none;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.4);
+  width: 100%;
+  text-align: center;
+  font-size: 1rem;
+  transition: all 0.1s;
 }
-.login-btn-submit{
-  color:#fff;
+
+.login-input:focus-visible {
+  border-bottom: 1.5px solid rgba(94, 2, 117, 0.678);
+  font-family: Ubuntu;
+}
+
+.login-form-control {
+  margin: 1rem 0;
+  text-align: center;
+}
+
+.login-btn-submit {
+  color: #fff;
   font-size: 1rem;
   font-family: Ubuntu;
   justify-content: center;
@@ -107,10 +121,12 @@
   border-color: #d41872;
   z-index: 1;
 }
-.login-btn-submit:hover{
+
+.login-btn-submit:hover {
   background-color: transparent;
 }
-.register-btn-submit{
+
+.register-btn-submit {
   color: #fff;
   font-size: 1rem;
   font-family: Ubuntu;
@@ -119,90 +135,84 @@
   cursor: pointer;
   transition: color 0.3s ease;
 }
-.register-btn-submit:hover{
-  color:#a100e0 ;
-}
-.login-card-header-title{
-    text-align: center;
-    font-size: 2rem;
-    font-weight: 400;
-    font-family: sans-serif;
-    color: #fff;
-}
-/*-----KEYFRAME IMAGES-------*/
-@keyframes change {
-  0%{
-      background-image: url(../../../assets/images/Imagelon-3.png);
-  }
-  20%{
-      background-image: url(../../../assets/images/imagenlon-2.png);
-  }
-  40%{
-      background-image: url(../../../assets/images/Imagelonn-1.png);
-  }
-  60%{
-      background-image: url(../../../assets/images/imagen-6.png);
-  }
-  80%{
-      background-image: url(../../../assets/images/Imagenlon-5.png);
-  }
-  100%{
-      background-image: url(../../../assets/images/Imagelon-3.png);
-  }
-}
-/*-----KEYFRAME NEON TEXT-----*/
-@keyframes cpink-neon {
-	0%, 19%, 21%, 23%, 25%, 54%, 56%, 100% {
-		text-shadow: 0 -1px 4px #fff,
-					 0 -2px 10px rgb(255, 0, 221),
-					 0 -10px 20px #f09;
-	}
 
-	10%, 15%, 60% {
-		text-shadow: none;
-	}
+.register-btn-submit:hover {
+  color: #a100e0;
 }
-// Animate the size, outside
+
+.login-card-header-title {
+  text-align: center;
+  font-size: 2rem;
+  font-weight: 400;
+  font-family: sans-serif;
+  color: #fff;
+}
+
+/* ----- KEYFRAME IMAGES ----- */
+@keyframes change {
+  0% {
+    background-image: url(../../../assets/images/Imagelon-3.png);
+  }
+
+  20% {
+    background-image: url(../../../assets/images/imagenlon-2.png);
+  }
+
+  40% {
+    background-image: url(../../../assets/images/Imagelonn-1.png);
+  }
+
+  60% {
+    background-image: url(../../../assets/images/imagen-6.png);
+  }
+
+  80% {
+    background-image: url(../../../assets/images/Imagenlon-5.png);
+  }
+
+  100% {
+    background-image: url(../../../assets/images/Imagelon-3.png);
+  }
+}
+
+/* ----- KEYFRAME NEON TEXT ----- */
+@keyframes cpink-neon {
+
+  0%,
+  19%,
+  21%,
+  23%,
+  25%,
+  54%,
+  56%,
+  100% {
+    text-shadow: 0 -1px 4px #fff,
+      0 -2px 10px rgb(255, 0, 221),
+      0 -10px 20px #f09;
+  }
+
+  10%,
+  15%,
+  60% {
+    text-shadow: none;
+  }
+}
+
+/* Animate the size, outside */
 .pulse:hover,
 .pulse:focus {
-    cursor: pointer;
+  cursor: pointer;
   animation: pulse 1s;
   box-shadow: 0 0 0 1em transparent;
 }
 
 @keyframes pulse {
-  0% { box-shadow: 0 0 0 0 var(--hover); }
-}
-
-$colors: (
-  pulse: #a100e0,
-);
-
-// Sass variables compile to a static string; CSS variables are dynamic and inherited
-  // Loop through the map and set CSS custom properties using Sass variables
-@each $button, $color in $colors {
-  .#{$button} {
-    --color: #{$color};
-    --hover: #{adjust-hue($color, 45deg)};
+  0% {
+    box-shadow: 0 0 0 0 var(--hover);
   }
 }
 
-// Now every button will have different colors as set above. We get to use the same structure, only changing the custom properties.
-button {
-  color: var(--color);
-  transition: 0.25s;
-
-  &:hover,
-  &:focus {
-    border-color: var(--hover);
-    color: #fff;
-  }
-}
-
-
-
-
-//Botton no disponible
-.btn-disabled{
+/* Botton no disponible */
+.btn-disabled {
   cursor: not-allowed;
 }
