SignUp endpoint y aplicación básica de este endpoint en el front

--- a/ClientApp/src/app/component/registrarse/registrarse.component.html
+++ b/ClientApp/src/app/component/registrarse/registrarse.component.html
@@ -15,7 +15,7 @@
             </div>
             <div class="registrarse-card-body">
                 <div class="registrarse-form-control">
-                    <input type="text" formControlName="nombre" placeholder="Nombre de usuario" class="registrarse-input">
+                    <input type="text" formControlName="name" placeholder="Nombre de usuario" class="registrarse-input">
                 </div>
                 <div class="registrarse-form-control">
                     <input type="email" formControlName="email" placeholder="Correo electronico" class="registrarse-input">
