Cambio de titulo

--- a/ClientApp/src/app/component/login/login.component.html
+++ b/ClientApp/src/app/component/login/login.component.html
@@ -4,7 +4,7 @@
       <img src="https://imgur.com/YHL61AI.png" class="imagen" alt="DixelRP" title="©DixelRP">
     </div>
     <h2 class="login-form-title">
-      PICHEL RP - Facciones
+      Dixel Rp - Facciones
     </h2>
     <article class="login-card">
       <nav class="container_icon">
