Nombre al parrafo home

--- a/ClientApp/src/app/component/login/login.component.html
+++ b/ClientApp/src/app/component/login/login.component.html
@@ -10,7 +10,7 @@
       <nav class="container_icon">
         <a href="#">
           <mat-icon aria-hidden="false" aria-label="volver">arrow_back_ios_new</mat-icon>
-          <p>Home</p>
+          <p>Inicio</p>
         </a>
       </nav>
       <header class="login-card-header">
