Rediseño - Login | Register | Tabla Admin

--- a/ClientApp/src/app/component/admin-users/admin-users.component.html
+++ b/ClientApp/src/app/component/admin-users/admin-users.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="app">
   <button mat-raised-button (click)="addUser()"> Add column </button>
   <button mat-raised-button (click)="removeUser()"> Remove column </button>
   <div class="user-table">
