--- a/ClientApp/src/app/user/user.component.html
+++ b/ClientApp/src/app/user/user.component.html
@@ -1,9 +1,8 @@
 <section class="app">
     <aside class="sidebar">
         <img src="https://imgur.com/YHL61AI.png" class="imagen" alt="DixelRP" title="©DixelRP">
-        <h1 class="slider_tittle">DX FACCIONES</h1>
+        <h1 class="slider_tittle">DX Facciones-User</h1>
         <nav class="sidebar-nav">
-            <a href="samp://S1.DIXEL-RP.COM:7777" class="ipsamp">S1.DIXEL-RP.COM</a>
             <ul class="sliderbar-list">
                 <li>
                     <a href="#" class="alink">
@@ -55,7 +54,7 @@
                             <a href="#" class="link">Entrenamientos</a>
                         </li>
                         <li>
-                            <a href="#" class="link">Actividad emanal</a>
+                            <a href="#" class="link">Actividad Semanal</a>
                         </li>
                         <li>
                             <a href="#" class="link">Personal Activo</a>
