--- a/ClientApp/src/app/admin/admin.component.scss
+++ b/ClientApp/src/app/admin/admin.component.scss
@@ -1,51 +1,32 @@
 .app {
   display: grid;
-  padding: 10px;
   column-gap: 10px;
   grid-template-columns: 1fr 6fr;
 }
-
 .sidebar {
-  min-width: 250px;
+  min-width: 260px;
   color: #f5f5f5;
   background-color: #1e1e1e;
   padding: 1rem;
-  border-radius: 15px;
   overflow: hidden;
   -webkit-overflow-scrolling: touch;
   z-index: 100;
 }
-
 .imagen {
   width: 80px;
   height: 60px;
   vertical-align: middle;
   transition: transform 1s ease;
 }
-
 .imagen:hover {
   transform: rotateY(360deg);
 }
-
 .sidebar .slider_title {
   font-size: 48px;
-  font-weight: bold;
   transition: color 0.5s ease;
 }
-
-.sidebar .ipsamp {
-  display: block;
-  text-align: center;
-  margin-bottom: 1rem;
-  color:#fff;
-  text-decoration: none;
-}
-.sidebar .ipsamp:hover{
-  color: #d31dab;
-  transform: scale(1.05);
-}
 .sidebar-nav {
-  height: 68vh;
+  height: 98vh;
   overflow-y: auto;
 }
 /* Estilo general del scrollbar */
@@ -68,7 +49,7 @@
 
 .sidebar-nav ul {
   list-style: none;
-  padding: 0;
+  padding: 0 8px;
   margin: 0;
 }
 
@@ -127,7 +108,7 @@
 /* Aplicar la animación al submenú */
 .sidebar-nav ul li .submenu {
   display: none;
-  animation: slideDown .5s ease-in-out;
+  animation: slideDown .4s ease-in-out;
 }
 
 .sidebar-nav ul li.active .submenu {
