--- a/ClientApp/src/app/component/login/login.component.html
+++ b/ClientApp/src/app/component/login/login.component.html
@@ -7,16 +7,14 @@
       PICHEL RP - Facciones
     </h2>
     <article class="login-card">
-      <nav class="container_icon">
-        <a href="#">
-          <mat-icon aria-hidden="false" aria-label="volver">arrow_back_ios_new</mat-icon>
-          <p>Home</p>
-        </a>
-      </nav>
       <header class="login-card-header">
-        <h3 class="login-card-header-title">
-          Iniciar sesión
-        </h3>
+        <!-- <div class="container_icon">
+                <a href="#">
+                  <mat-icon aria-hidden="false" aria-label="volver">arrow_back_ios_new</mat-icon>
+                  <p>Inicio</p>
+                </a>
+              </div> -->
+        <h3 class="login-card-header-title">Iniciar sesión</h3>
       </header>
       <div class="login-card-body">
         <div class="login-form-control">
@@ -28,9 +26,9 @@
       </div>
       <footer class="login-card-footer">
         <button class="login-btn-submit pulse" [ngClass]="{'btn-disabled':formLogin.invalid}" [disabled]="formLogin.invalid" type="submit">Entrar</button>
-      </footer>
-      <footer class="login-card-footer">
-        <a class="register-btn-submit" (click)="ir('registrarse')">¿No tienes cuenta? Regístrate!</a>
+        <div class="register-account">
+          <a class="register-btn-submit" (click)="ir('registrarse')">¿No tienes cuenta? Regístrate!</a>
+        </div>
       </footer>
     </article>
   </form>
