--- a/ClientApp/src/app/component/registrarse/registrarse.component.scss
+++ b/ClientApp/src/app/component/registrarse/registrarse.component.scss
@@ -1,31 +1,39 @@
 
 .registrarse-container-card{
+    font-family: 'Ubuntu', sans-serif;
     height: 100vh;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url(../../../assets/images/imaginrest-1.png);
+    background-image: url(../../../assets/images/imagen-6.png);
     background-position: center;
     background-repeat: no-repeat;
-    -webkit-background-size: 100% 100%;               /* Safari 3.0 */
-    -moz-background-size: 100% 100%;                  /* Gecko 1.9.2 (Firefox 3.6) */
-    -o-background-size: 100% 100%;                    /* Opera 9.5 */
-    background-size: 100% 100%;                       /* Gecko 2.0 (Firefox 4.0) and other CSS3-compliant browsers */
+    -webkit-background-size: 100% 100%;
+    -moz-background-size: 100% 100%;
+    -o-background-size: 100% 100%;
+    background-size: 100% 100%;
     background-size: cover;
-
 }
-
 .registrarse-card{
-    height: 55vh;
-    width:  30vw;
+    height: auto;
+    width: 420px;
     margin: auto;
     padding: 2rem;
-    display: grid;
-    grid-template-rows: 1fr 3fr 1fr;
-    background-color:#c917b107;
-    backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(25pox);
+    background: rgba(138, 75, 175, .4);
+    border-radius: 16px;
+    backdrop-filter: blur(4.9px);
+    -webkit-backdrop-filter: blur(4.9px);
+    border: 1px solid rgba(138, 75, 175, 0.11);
+}
+.register-form-title {
+  font-size: 28px;
+  color: #fff;
+  line-height: 1.2;
+  text-align: center;
+  text-transform: uppercase;
+  margin: 15px 0;
+  animation: cpink-neon 2s infinite alternate;
 }
 .container_icon {
   display: flex;
@@ -39,18 +47,18 @@
   text-align: right;
 }
 .container_icon a mat-icon {
-  font-size: 18px; /* Tamaño del icono */
+  font-size: 18px;
   font-weight: bold;
 }
 .container_icon a p {
-  font-size: 1.4rem; /* Tamaño del texto */
+  font-size: 1.4rem;
 }
 .container_icon a:hover {
-  color: #d41872; /* Color rosado al pasar el cursor */
+  color: #DAE2F1;
   font-weight: bold;
 }
 
-.imagen{ /*Imagen de logo dixel*/
+.imagen{
   width:170px;
 	height:120px;
   display: block;
@@ -59,38 +67,46 @@
 }
 
 .registrarse-input, .registrarse-input:focus-visible{
-    all:unset;
-    color: #fff;
-    border-top: none;
-    border-right: none;
-    border-left: none;
-    border-bottom: 1px solid rgba(0,0,0,0.4);
-    width: 100%;
-    text-align: center;
-    font-size: 1rem;
-    transition: all .1s;
+  width: 90%;
+  all:unset;
+  color: #fff;
+  margin-bottom: 3px;
+  padding: 5px 25px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.4);
+  text-align: center;
+  font-size: 1rem;
+  box-sizing: border-box;
+  transition: all .1s;
 }
 .registrarse-input:focus-visible{
-    border-bottom: 1.5px solid rgba(94, 2, 117, 0.678);
-
+  border-bottom: 1.5px solid rgba(94, 2, 117, 0.678);
+  outline: none;
 }
 .registrarse-form-control{
     margin: 1rem 0;
     text-align: center;
 }
-
+.registrarse-form-control{
+  margin: 1rem 0;
+  text-align: center;
+}
 .registrarse-btn-submit{
-    font-family:Ubuntu, sans-serif;
-    text-align: center;
-    margin: 1rem auto;
-    background: #d41872;
-    color: white;
-    font-size: 1rem;
-    border-radius: 21px;
-    min-width: 60px;
-    height: 42px;
-    width: 100%;
-    border-color:#d41872;
+  color: #fff;
+  font-size: 1rem;
+  font-family: Ubuntu;
+  justify-content: center;
+  align-items: center;
+  padding: 0 20px;
+  height: 42px;
+  width: 65%;
+  border-radius: 21px;
+  margin: 2rem auto;
+  background: #d41872;
+  position: relative;
+  border-color: #d41872;
+  z-index: 1;
+  display: block;
+  transition: all 0.3s;
 }
 .login-btn-submit{
   color: #ffff;
@@ -102,21 +118,45 @@
   transition: color 0.3s ease;
 }
 .login-btn-submit:hover{
-  color:#a100e0 ;
+  color: #e26ab5;
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15), 0 3px 6px rgba(0, 0, 0, 0.12);
 }
 .registrarse-btn-submit:hover{
-  background-color: transparent;
+  background: #8D6CC7;
+  border-color: #8D6CC7;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.08);
 }
 .registrarse-card-header-title{
-    text-align: center;
-    font-size: 2rem;
-    font-weight: 400;
-    font-family:Ubuntu, sans-serif;
-    color: #fff;
-    text-shadow: 0 -1px 4px #fff,
-					 0 -2px 1px rgb(255, 0, 221),
-					 0 -10px 20px #f09;
+  text-align: center;
+  font-size: 2rem;
+  font-weight: 400;
+  font-family: sans-serif;
+  color: #fff;
 }
+
+/* ----- KEYFRAME NEON TEXT ----- */
+@keyframes cpink-neon {
+
+  0%,
+  19%,
+  21%,
+  23%,
+  25%,
+  54%,
+  56%,
+  100% {
+    text-shadow: 0 -1px 4px #fff,
+      0 -2px 10px rgb(255, 0, 221),
+      0 -10px 20px #f09;
+  }
+
+  10%,
+  15%,
+  60% {
+    text-shadow: none;
+  }
+}
+
 // Animate the size, outside
 .pulse:hover,
 .pulse:focus {
