correcciones y cierre de sesión

--- a/ClientApp/src/app/admin/admin.component.html
+++ b/ClientApp/src/app/admin/admin.component.html
@@ -86,8 +86,8 @@
             </li>
           </ul>
         </li>
-        <li>
-          <a href="#" class="alink">
+        <li (click)="this.logout()">
+          <a class="alink">
             <mat-icon>keyboard_tab</mat-icon>
             <span class="logout">Cerrar session</span>
           </a>
