--- a/ClientApp/src/app/pages/no-auth-pages/login/login.component.scss
+++ b/ClientApp/src/app/pages/no-auth-pages/login/login.component.scss
@@ -6,7 +6,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url(../../../assets/images/Imagelon-3.png);
+  background-image: url(../../../../assets/images/Imagelon-3.png);
   background-position: center;
   background-repeat: no-repeat;
   -webkit-background-size: 100% 100%;
