--- a/ClientApp/src/styles.scss
+++ b/ClientApp/src/styles.scss
@@ -1,4 +1,5 @@
 @import 'assets/styles/my-theme.scss';
+@import 'assets/styles/accordion-sidenav.scss';
 html, body { height: 100%; }
 .main-container{
     overflow: hidden;
